--- a/style.css
+++ b/style.css
@@ -124,3 +124,35 @@ header {
 .account-handle {
   color: rgb(110, 118, 125);
 }
+
+main {
+  width: 71%;
+  height: 100%;
+  margin-left: 29%;
+}
+
+.main-flex {
+  display: flex;
+  width: 100%;
+}
+
+.main-feed {
+  width: 50%;
+  border-left: 1px solid rgb(47, 51, 54);
+  border-right: 1px solid rgb(47, 51, 54);
+}
+
+.home-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 55px;
+  width: 100%;
+  font-size: 2rem;
+  font-weight: 400;
+  padding: 0 15px;
+  position: sticky;
+  top: 0;
+  background-color: black;
+  color: white;
+}
