.side-feed >>>> .search

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ header {
 main {
   width: 71%;
   height: 100%;
-  margin-left: 29%;
+  margin-left: 29%; /* header outside flow page because position: fixed */
 }
 
 .main-flex {
@@ -266,4 +266,32 @@ main {
   width: 100%;
   margin: 15px 0;
   padding-right: 50px;
+}
+
+.side-feed {
+  width: 50%;
+  padding: 0 2%;
+}
+
+.search {
+  display: flex;
+  height: 55px;
+  max-width: 355px;
+  position: sticky;
+  top: 0;
+  padding-top: 5px;
+  background-color: black;
+}
+
+.search input {
+  background-color: #212327;
+  border-radius: 9999px;
+  height: 45px;
+  width: 100%;
+  border: none;
+  padding-left: 30px;
+  font-size: 1.5rem;
+  color: white;
+  line-height: 20px;
+  font-weight: 400;
 }
